# meetingagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.claude/: settings.json
.claude-flow/: config.yaml
apps/api/: nixpacks.toml  pyproject.toml  railway.toml
apps/api/src/adapters/: base.py
apps/api/src/adapters/recall/: webhook_parser.py
apps/api/src/api/: app.py  routes_proposals.py  routes_webhooks.py  routes_workspace.py  routes_ws.py
apps/api/src/config/: constants.py  settings.py
apps/api/src/db/migrations/: env.py
apps/api/src/db/migrations/versions/: 001_add_missing_columns.py  002_add_has_linear.py  003_add_dropped_to_proposalstatus.py
apps/api/src/models/: __init__.py  tables.py
apps/api/src/services/: cerebras.py  composio_client.py  deduper.py  executor.py  extractor.py  gate.py  web_tools.py  ws_manager.py
apps/api/src/workers/: calendar_poll.py  extraction_loop.py
apps/api/tests/integration/: test_artifact_endpoint.py  test_executor_integration.py  test_gate_integration.py
apps/api/tests/unit/: test_artifact_executor.py  test_cerebras_parsing.py  test_constants_values.py  test_executor.py  test_gate.py  test_proposal_gate_columns.py  test_readiness_filter.py  test_rolling_buffer.py  test_ws_manager.py
docs/: AGENTS.md  README.md  architecture.md
src/: config.py  main.py
supabase/: config.toml
tz-yeschef/: .env.example  .gitignore  AGENTS.md  SPECS.md  alembic.ini  package.json  turbo.json
william-implementation/: .gitignore  package-lock.json
(+133 files in other folders)
