[project]
name = "meeting-assistant"
version = "0.1.0"
description = "Real-time AI meeting assistant that joins Zoom, transcribes, and takes actions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "anthropic>=0.44.0",
    "composio>=0.7.0",
    "composio-anthropic>=0.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]
