[project]
name = "yeschef"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "websockets>=14.0",
    "openai>=1.60",
    "composio-crewai>=0.7",
    "crewai[google-genai]>=0.100",
    "cerebras-cloud-sdk>=1.0",
    "crewai-tools>=1.9.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "aiosqlite>=0.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that make real API calls (deselect with '-m not integration')",
]
